--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.32",
     "vite-svg-loader": "^4.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
